--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "/qr-scanner/index.html",
   "background_color": "#ffffff",
   "display": "standalone",
   "theme_color": "#4DBA87"
